Adição de regra para tratamento de pesquisa com nome vazio