@@ -52,7 +52,7 @@ public class BrinquedoController {
             @RequestParam(required = false) BigDecimal minValor,
             @RequestParam(required = false) BigDecimal maxValor) {
 
-        if (nome != null && nome.isBlank()) {
+        if (nome != null && nome.trim().isEmpty()) {
             nome = null;
         }
 
